feat: 모든 layout에서 중첩된 layout 제거, 중복 layout 제거, 리스트 아이템에서 종목명 열글자 이내로 조정

--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainStock">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".MainStock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/warm_white">
@@ -67,11 +65,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
                 android:text="@string/main_totassetmoney"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:includeFontPadding="false"
+                app:layout_constraintEnd_toStartOf="@+id/view_main_characterwrapper"
                 app:layout_constraintStart_toStartOf="@+id/txtview_main_totasset"
                 app:layout_constraintTop_toBottomOf="@+id/txtview_main_totasset" />
 
@@ -154,4 +153,3 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
