--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -34,12 +34,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ic_calendar_plus_24dp"
         android:contentDescription="@string/calendar_plus"
+        app:layout_constraintBottom_toBottomOf="@+id/txtview_calendar_plus"
+        app:layout_constraintEnd_toStartOf="@+id/txtview_calendar_plus"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtview_calendar_plus"
-        app:layout_constraintEnd_toStartOf="@+id/txtview_calendar_plus"
-        app:layout_constraintBottom_toBottomOf="@+id/txtview_calendar_plus"
-        />
+        app:layout_constraintTop_toTopOf="@+id/txtview_calendar_plus" />
 
     <TextView
         android:id="@+id/txtview_calendar_plus"
@@ -55,34 +54,31 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         />
+
     <ImageView
         android:id="@+id/imgview_calendar_zero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_calendar_zero_24dp"
         android:contentDescription="@string/calendar_zero"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtview_calendar_zero"
-        app:layout_constraintEnd_toStartOf="@+id/txtview_calendar_zero"
         app:layout_constraintBottom_toBottomOf="@+id/txtview_calendar_zero"
 
-        />
+        app:layout_constraintEnd_toEndOf="@+id/imgview_calendar_plus"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@+id/imgview_calendar_plus"
+        app:layout_constraintTop_toTopOf="@+id/txtview_calendar_zero" />
 
     <TextView
         android:id="@+id/txtview_calendar_zero"
         style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/calendar_zero"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgview_calendar_zero"
-        app:layout_constraintTop_toBottomOf="@+id/txtview_calendar_plus"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        />
+        app:layout_constraintStart_toStartOf="@+id/txtview_calendar_plus"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_calendar_plus" />
 
     <ImageView
         android:id="@+id/imgview_calendar_minus"
@@ -91,9 +87,9 @@
         android:background="@drawable/ic_calendar_minus_24dp"
         android:contentDescription="@string/calendar_minus"
         app:layout_constraintBottom_toBottomOf="@+id/txtview_calendar_minus"
-        app:layout_constraintEnd_toStartOf="@+id/txtview_calendar_minus"
+        app:layout_constraintEnd_toEndOf="@+id/imgview_calendar_zero"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imgview_calendar_zero"
         app:layout_constraintTop_toTopOf="@+id/txtview_calendar_minus" />
 
     <TextView
@@ -101,14 +97,11 @@
         style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/calendar_minus"
         android:textColor="@color/black"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgview_calendar_minus"
-        app:layout_constraintTop_toBottomOf="@+id/txtview_calendar_zero"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        />
+        app:layout_constraintStart_toStartOf="@+id/txtview_calendar_zero"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_calendar_zero" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
