--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".WalletTransactionFragment">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".WalletTransactionFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -80,12 +79,10 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:spinnerMode="dropdown"
             />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
