--- a/app/src/main/res/layout/layout_main_stocklistitem.xml
+++ b/app/src/main/res/layout/layout_main_stocklistitem.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_listitem_border"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,9 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:paddingVertical="12dp"
         android:paddingStart="28dp"
-
         android:paddingEnd="20dp"
-
         >
 
         <TextView
@@ -47,20 +41,24 @@
             android:layout_marginStart="8dp"
 
             />
-        <TextView
-            android:id="@+id/txtview_main_stockname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:maxLines="1"
-            android:text="@string/main_stockname"
-            android:textColor="@color/black"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:includeFontPadding="false"
-            app:layout_constraintTop_toBottomOf="@id/txtview_main_markettype"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="4dp"
-            />
+
+    <TextView
+        android:id="@+id/txtview_main_stockname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/noto_sans_kr_medium"
+        android:includeFontPadding="false"
+        android:maxLength="10"
+        android:text="@string/main_stockname"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/txtview_main_stockprice"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtview_main_markettype"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        android:layout_marginEnd="16dp"
+        />
         <TextView
             android:id="@+id/txtview_wallet_transcontent"
             android:layout_width="wrap_content"
@@ -98,6 +96,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/txtview_main_stockname"
+            app:layout_constraintStart_toEndOf="@+id/txtview_main_stockname"
             />
         <TextView
             android:id="@+id/txtview_main_stocktotprice"
@@ -127,5 +126,3 @@
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
