--- a/app/src/main/res/layout/fragment_main_stock.xml
+++ b/app/src/main/res/layout/fragment_main_stock.xml
@@ -62,7 +62,7 @@
 
             <TextView
                 android:id="@+id/txtview_main_totassetmoney"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/noto_sans_kr_bold"
@@ -82,7 +82,10 @@
                 android:background="@drawable/bg_oval"
                 android:backgroundTint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/txtview_main_totassetmoney"
+                android:layout_marginStart="8dp"
+                >
                 <!-- ImgView 들어갈 자리-->
             </View>
 
@@ -93,6 +96,7 @@
                 android:padding="4dp"
                 android:background="@drawable/bg_round_noborder_4dp"
                 android:contentDescription="@string/main_plusbutton"
+                android:elevation="8dp"
                 android:src="@drawable/ic_baseline_add_24"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/view_main_characterwrapper"
