[Feature/main] 메인, 지갑, 메인-캘린더 XML 구현 - 진 (#5)
* [layout] main 화면에서 헤더, mycomp

* style(xml): 메인, 지갑 페이지의 리사이클러뷰 아이템 부분

* style(xml): 지갑 페이지의 리사이클러뷰 날짜아이템 구현

* style(xml): 지갑 페이지의 리사이클러뷰 날짜아이템 글꼴 추가, 사이즈 조정

* style(xml): 지갑 페이지의 mystatus(상단 자산 관련 컴포) 파이차트 제외하고 구현

* style(xml): 메인 페이지의 탭레이아웃, 뷰페이저 부분 constraint 부분 수정

* feat(xml): 지갑 페이지 margin warning 부분 수정

* feat(xml): 메인 페이지 margin warning 부분 수정

* style(xml): colors 수정한 것 지갑, 메인 xml들에 반영

* style(xml): drawable 파일 이름 수정 및 반영

* style(xml): 메인, 지갑 화면- 보유종목 탭에 어떤 항목도 없을 때의 화면

* feat(xml): 지갑페이지 거래 내역 탭 부분 추가

* feat(xml): 캘린더페이지에서 캘린더 부분 빈 뷰로 넣고, 표정들 이미지 안 박고 나머지 완

* style(xml): calendar에서 빈 이미지뷰에 표정 추가, 정렬은 (표정+txtview) 묶음이 가운데정렬로.

* style(xml): 메인화면 logo 이미지 이름 logo_main으로 변경

* style(xml): refactoring - drawable에서 배경 색깔 빼고 틀만 유지(보더 색, 보더 round)

* style(xml): 메인-마이컴포, 지갑-mystatus컴포 부분 그림자 구현

* style(xml): refactoring - rename to MainStockFragment, WalletFragment.kt

* style(xml): 메인, 지갑 페이지 리사이클러뷰 프래그먼트들 생성 및 기본 작업

* feat: 모든 layout에서 중첩된 layout 제거, 중복 layout 제거, 리스트 아이템에서 종목명 열글자 이내로 조정

* style(xml): 메인 화면 마이 컴포넌트에서 +버튼에 그림자, 총 자산 금액 부분 wrap up 설정(layout_width: 0으로 설정)

* style(xml): calendar 화면에 toolbar 추가

* style(xml): merge 위해 commit, 의미 없이 공백 하나 삭제

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,14 @@
 
     <!--  Damda color.  -->
     <color name="dusty_orange">#e67c49</color>
+    <color name="pastel_red">#e6504f</color>
+    <color name="dark_sky_blue">#4f99e6</color>
+    <color name="warm_white">#f8f8f8</color>
+
+    <color name="grey_100">#E5E5E5</color>
+    <color name="grey_200">#D7D7D7</color>
+    <color name="grey_300">#c4c4c4</color>
+    <color name="warm_grey">#959595</color>
     <color name="brownish_grey">#636363</color>
     <color name="brownish_grey_50">#80636363</color>
-    <color name="warm_grey">#959595</color>
-    <color name="warm_white">#f8f8f8</color>
 </resources>
