style: 간격, 스타일 수정

--- a/app/src/main/res/drawable/bg_buying_button.xml
+++ b/app/src/main/res/drawable/bg_buying_button.xml
@@ -4,6 +4,6 @@
         android:radius="8dp"
         />
     <solid
-        android:color="@color/buyingColor"
+        android:color="@color/pastel_red"
         />
 </shape>
