--- a/app/src/main/res/drawable/bg_all_buying_button.xml
+++ b/app/src/main/res/drawable/bg_all_buying_button.xml
@@ -7,7 +7,7 @@
         android:color="@color/white"
         />
     <stroke
-        android:color="@color/buyingColor"
+        android:color="@color/pastel_red"
         android:width="2dp"
         />
 </shape>
