--- a/app/src/main/res/drawable/bg_all_selling_button.xml
+++ b/app/src/main/res/drawable/bg_all_selling_button.xml
@@ -7,7 +7,7 @@
         android:color="@color/white"
         />
     <stroke
-        android:color="@color/sellingColor"
+        android:color="@color/dark_sky_blue"
         android:width="2dp"
         />
 </shape>
