style: XML Button, backgroundTint="@null" 추가

--- a/app/src/main/res/drawable/bg_buying_button.xml
+++ b/app/src/main/res/drawable/bg_buying_button.xml
@@ -4,6 +4,6 @@
         android:radius="8dp"
         />
     <solid
-        android:color="@color/pastel_red"
+        android:color="#e6504f"
         />
 </shape>
