--- a/app/src/main/res/layout/activity_detail_info.xml
+++ b/app/src/main/res/layout/activity_detail_info.xml
@@ -187,31 +187,39 @@
         android:id="@+id/button_one_day"
         style="@style/Medium"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="28dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/bg_graph_button"
         android:text="@string/day"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/button_buying"
         app:layout_constraintEnd_toStartOf="@+id/button_one_week"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:backgroundTint="@null"/>
 
     <Button
         android:id="@+id/button_one_week"
         style="@style/Medium"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:layout_marginBottom="44dp"
         android:background="@drawable/bg_graph_button"
         android:text="@string/one_week"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/button_buying"
         app:layout_constraintEnd_toStartOf="@+id/button_one_month"
         app:layout_constraintStart_toEndOf="@+id/button_one_day" />
@@ -220,14 +228,18 @@
         android:id="@+id/button_one_month"
         style="@style/Medium"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="44dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
         android:text="@string/one_month"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/button_buying"
         app:layout_constraintEnd_toStartOf="@+id/button_three_month"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -237,14 +249,18 @@
         android:id="@+id/button_three_month"
         style="@style/Medium"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="44dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
         android:text="@string/three_month"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/button_selling"
         app:layout_constraintEnd_toStartOf="@+id/button_one_year"
         app:layout_constraintStart_toEndOf="@+id/button_one_month" />
@@ -253,16 +269,20 @@
         android:id="@+id/button_one_year"
         style="@style/Medium"
         android:layout_width="0dp"
-        android:layout_height="24dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="44dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:background="@drawable/bg_graph_button"
         android:text="@string/one_year"
         android:textColor="@color/black"
         android:textSize="12sp"
+        app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/button_selling"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_three_month" />
@@ -277,6 +297,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:background="@drawable/bg_buying_button"
         android:text="@string/buying"
         android:textColor="@color/white"
@@ -284,7 +307,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_selling"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:backgroundTint="@null"/>
 
     <Button
         android:id="@+id/button_selling"
@@ -294,13 +318,17 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:padding="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
         android:background="@drawable/bg_selling_button"
         android:text="@string/selling"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_buying" />
+        app:layout_constraintStart_toEndOf="@+id/button_buying"
+        app:backgroundTint="@null"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
