--- a/app/src/main/res/drawable/bg_all_buying_button.xml
+++ b/app/src/main/res/drawable/bg_all_buying_button.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="6dp"
-        />
-    <solid
-        android:color="@color/white"
-        />
+    <corners android:radius="6dp" />
+    <solid android:color="#FFFFFF" />
     <stroke
-        android:color="@color/pastel_red"
+        android:color="#e6504f"
         android:width="2dp"
         />
 </shape>
