--- a/app/src/main/res/drawable/bg_all_selling_button.xml
+++ b/app/src/main/res/drawable/bg_all_selling_button.xml
@@ -4,7 +4,7 @@
         android:radius="6dp"
         />
     <solid
-        android:color="@color/white"
+        android:color="#FFFFFF"
         />
     <stroke
         android:color="@color/dark_sky_blue"
