--- a/app/src/main/res/drawable/bg_cancel_button.xml
+++ b/app/src/main/res/drawable/bg_cancel_button.xml
@@ -4,6 +4,6 @@
         android:radius="8dp"
         />
     <solid
-        android:color="@color/warm_grey"
+        android:color="#959595"
         />
 </shape>
