--- a/app/src/main/res/layout/fragment_wallet_transaction.xml
+++ b/app/src/main/res/layout/fragment_wallet_transaction.xml
@@ -19,17 +19,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingVertical="8dp"
             >
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
                 android:id="@+id/btn_wallet_filterall"
                 style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
+                android:padding="0dp"
                 android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
+                android:minWidth="0dp"
+                android:background="@drawable/bg_wallet_button"
+                app:backgroundTint="@null"
                 android:text="@string/wallet_filterall"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -37,34 +37,34 @@
                 app:layout_constraintStart_toStartOf="parent"
                  />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
                 android:id="@+id/btn_wallet_filterbuy"
                 style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="4dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
+                android:padding="0dp"
                 android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
+                android:minWidth="0dp"
+                android:background="@drawable/bg_wallet_button"
+                app:backgroundTint="@null"
                 android:text="@string/wallet_filterbuy"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_wallet_filterall"
                 />
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
                 android:id="@+id/btn_wallet_filtersell"
                 style="@style/Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="4dp"
-                android:background="@drawable/bg_check_button"
-                android:minWidth="0dp"
+                android:padding="0dp"
                 android:minHeight="0dp"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="4dp"
+                android:minWidth="0dp"
+                android:background="@drawable/bg_wallet_button"
+                app:backgroundTint="@null"
                 android:text="@string/wallet_filtersell"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -84,5 +84,5 @@
             />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <!-- 프래그먼트? 들어갈 자리? -->
     </androidx.constraintlayout.widget.ConstraintLayout>
